前端框架搭建基本完成
完成情况：登录界面、主界面完成；各类组件自定义样式基本完成
框架更改：.NET Framework 4.5 → .NET Framework 4.6.1
引用：MaterialSkin的NuGet程序包

#待完成的前端工作：组件样式的微调；通知区域图标显示
!!!Warning!!! - 请至少使用Visual Stutio 2015以上的版本或自行安装.NET Framework 4.6.1运行库再打开项目文件！

--- a/FtpClient.csproj
+++ b/FtpClient.csproj
@@ -8,9 +8,12 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>FtpClient</RootNamespace>
     <AssemblyName>FtpClient</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,8 +34,15 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon/FtpClient.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MaterialSkin.Updated.0.2.2\lib\MaterialSkin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,16 +55,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FtpClient.cs">
+    <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FtpClient.Designer.cs">
-      <DependentUpon>FtpClient.cs</DependentUpon>
+    <Compile Include="login.Designer.cs">
+      <DependentUpon>login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="main_app.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="main_app.Designer.cs">
+      <DependentUpon>main_app.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FtpClient.resx">
-      <DependentUpon>FtpClient.cs</DependentUpon>
+    <Compile Include="界面美化\MyProgressBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <EmbeddedResource Include="login.resx">
+      <DependentUpon>login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="main_app.resx">
+      <DependentUpon>main_app.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -63,7 +86,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -73,6 +98,30 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\forward.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\FtpClient.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\upload.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\create-directories.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\download.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon\delete.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
