添加了FTPHelper操作类
1.添加了FTPHelper操作类
2.删除了一部分冗余代码

--- a/FtpClient.csproj
+++ b/FtpClient.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FTPHelper.cs" />
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,9 +70,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="界面美化\MyProgressBar.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
